--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="manifest" href="/fruit-explorer/manifest.json" />
     <title>fruit-SALAD Explorer</title>
     <meta property="og:title" content="fruit-SALAD Explorer">
-    <meta property="description" content="Interactive visualization tool of the dataset paper 'fruit-SALAD: A Style Aligned Artwork Dataset to reveal similarity perception in image embeddings'">
-    <meta property="og:description" content="Interactive visualization tool of the dataset paper 'fruit-SALAD: A Style Aligned Artwork Dataset to reveal similarity perception in image embeddings'">
+    <meta property="description" content="Interactive visualization tool for the dataset paper 'fruit-SALAD: A Style Aligned Artwork Dataset to reveal similarity perception in image embeddings'">
+    <meta property="og:description" content="Interactive visualization tool for the dataset paper 'fruit-SALAD: A Style Aligned Artwork Dataset to reveal similarity perception in image embeddings'">
     <meta property="og:image"
         content="https://style-aligned-artwork-datasets.github.io/fruit-explorer/fruit-explorer_screenshot.png">
     <meta property="og:url" content="https://style-aligned-artwork-datasets.github.io/fruit-explorer/">
